[gd_scene load_steps=3 format=3 uid="uid://cmbain8oyr6xy"]

[ext_resource type="Script" path="res://network/client.gd" id="1_ujgdk"]
[ext_resource type="PackedScene" uid="uid://drn7dly0o32on" path="res://game/game.tscn" id="2_h1cup"]

[node name="Peer" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_ujgdk")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Chat" type="RichTextLabel" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
bbcode_enabled = true
fit_content = true
scroll_following = true

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="ChatInput" type="LineEdit" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SendChatButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Send"

[node name="Game" parent="." instance=ExtResource("2_h1cup")]

[connection signal="text_submitted" from="CanvasLayer/VBoxContainer/HBoxContainer/ChatInput" to="." method="_on_chat_input_text_submitted"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/SendChatButton" to="." method="_on_send_chat_button_pressed"]
